syntax = "proto3";
package pb;

option go_package = "github.com/snple/beacon/pb;pb";

message Wire {
    string id = 1;
    string node_id = 2;
    string name = 3;
    string desc = 4;
    string tags = 5;
    string source = 6;
    string config = 7;
    sint32 status = 9;
    int64 created = 10;
    int64 updated = 11;
    int64 deleted = 12;
}

message Pin {
    string id = 1;
    string node_id = 2;
    string wire_id = 3;
    string name = 4;
    string desc = 5;
    string tags = 6;
    string type = 7;
    string addr = 8;
    string value = 9;
    string config = 10;
    sint32 status = 11;
    sint32 rw = 12;
    int64 created = 13;
    int64 updated = 14;
    int64 deleted = 15;
}

message PinValue {
    string id = 1;
    string value = 2;
    int64 updated = 3;
}

message PinNameValue {
    string id = 1;
    string name = 2;
    string value = 3;
    int64 updated = 4;
}

message PinValueUpdated {
    string id = 1;
    string node_id = 2;
    string wire_id = 3;
    string value = 4;
    int64 updated = 5;
}
